// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderWSideNav SideNav expansion behavior does not expand SideNav when isSideNavExpanded=false and isRail=false: not_expanded_no_rail 1`] = `
<div>
  <div
    data-testid="header-container"
  >
    <header
      aria-label="Bahmni Clinical"
      data-testid="header"
    >
      <nav
        aria-label="Breadcrumb"
        data-testid="breadcrumb"
      >
        <ol
          data-no-trailing="true"
        >
          <li>
            <a
              data-testid="breadcrumb-item"
              href="#"
            >
              Home
            </a>
          </li>
          <li>
            <a
              aria-current="page"
              data-testid="breadcrumb-item-current"
            >
              Current Page
            </a>
          </li>
        </ol>
      </nav>
      <div
        data-testid="header-global-bar"
      >
        <button
          aria-label="Search"
          data-testid="global-action-search"
          data-tooltip-alignment="end"
        >
          <div>
            SearchIcon
          </div>
        </button>
        <button
          aria-label="Notifications"
          data-testid="global-action-notifications"
          data-tooltip-alignment="end"
        >
          <div>
            NotificationIcon
          </div>
        </button>
      </div>
      <nav
        aria-label="SIDE_NAVIGATION"
        data-expanded="false"
        data-is-rail="true"
        data-testid="side-nav"
      >
        <ul
          data-testid="side-nav-items"
        >
          <a
            aria-current="page"
            data-active="true"
            data-testid="sidenav-item-dashboard"
            href="#"
            role="link"
          >
            <div
              data-icon-name="fa-dashboard"
              data-size="lg"
              data-testid="sidebar-icon-dashboard"
            >
              Icon Mock
            </div>
            <span>
              Dashboard
            </span>
          </a>
          <a
            data-active="false"
            data-testid="sidenav-item-patients"
            href="#"
            role="link"
          >
            <div
              data-icon-name="fa-user"
              data-size="lg"
              data-testid="sidebar-icon-patients"
            >
              Icon Mock
            </div>
            <span>
              Patients
            </span>
          </a>
        </ul>
      </nav>
    </header>
  </div>
</div>
`;

exports[`HeaderWSideNav SideNav expansion behavior does not expand SideNav when isSideNavExpanded=false and isRail=true: not_expanded_with_rail 1`] = `
<div>
  <div
    data-testid="header-container"
  >
    <header
      aria-label="Bahmni Clinical"
      data-testid="header"
    >
      <nav
        aria-label="Breadcrumb"
        data-testid="breadcrumb"
      >
        <ol
          data-no-trailing="true"
        >
          <li>
            <a
              data-testid="breadcrumb-item"
              href="#"
            >
              Home
            </a>
          </li>
          <li>
            <a
              aria-current="page"
              data-testid="breadcrumb-item-current"
            >
              Current Page
            </a>
          </li>
        </ol>
      </nav>
      <div
        data-testid="header-global-bar"
      >
        <button
          aria-label="Search"
          data-testid="global-action-search"
          data-tooltip-alignment="end"
        >
          <div>
            SearchIcon
          </div>
        </button>
        <button
          aria-label="Notifications"
          data-testid="global-action-notifications"
          data-tooltip-alignment="end"
        >
          <div>
            NotificationIcon
          </div>
        </button>
      </div>
      <nav
        aria-label="SIDE_NAVIGATION"
        data-expanded="false"
        data-is-rail="true"
        data-testid="side-nav"
      >
        <ul
          data-testid="side-nav-items"
        >
          <a
            aria-current="page"
            data-active="true"
            data-testid="sidenav-item-dashboard"
            href="#"
            role="link"
          >
            <div
              data-icon-name="fa-dashboard"
              data-size="lg"
              data-testid="sidebar-icon-dashboard"
            >
              Icon Mock
            </div>
            <span>
              Dashboard
            </span>
          </a>
          <a
            data-active="false"
            data-testid="sidenav-item-patients"
            href="#"
            role="link"
          >
            <div
              data-icon-name="fa-user"
              data-size="lg"
              data-testid="sidebar-icon-patients"
            >
              Icon Mock
            </div>
            <span>
              Patients
            </span>
          </a>
        </ul>
      </nav>
    </header>
  </div>
</div>
`;

exports[`HeaderWSideNav SideNav expansion behavior does not expand SideNav when isSideNavExpanded=true and isRail=true: expanded_with_rail 1`] = `
<div>
  <div
    data-testid="header-container"
  >
    <header
      aria-label="Bahmni Clinical"
      data-testid="header"
    >
      <nav
        aria-label="Breadcrumb"
        data-testid="breadcrumb"
      >
        <ol
          data-no-trailing="true"
        >
          <li>
            <a
              data-testid="breadcrumb-item"
              href="#"
            >
              Home
            </a>
          </li>
          <li>
            <a
              aria-current="page"
              data-testid="breadcrumb-item-current"
            >
              Current Page
            </a>
          </li>
        </ol>
      </nav>
      <div
        data-testid="header-global-bar"
      >
        <button
          aria-label="Search"
          data-testid="global-action-search"
          data-tooltip-alignment="end"
        >
          <div>
            SearchIcon
          </div>
        </button>
        <button
          aria-label="Notifications"
          data-testid="global-action-notifications"
          data-tooltip-alignment="end"
        >
          <div>
            NotificationIcon
          </div>
        </button>
      </div>
      <nav
        aria-label="SIDE_NAVIGATION"
        data-expanded="false"
        data-is-rail="true"
        data-testid="side-nav"
      >
        <ul
          data-testid="side-nav-items"
        >
          <a
            aria-current="page"
            data-active="true"
            data-testid="sidenav-item-dashboard"
            href="#"
            role="link"
          >
            <div
              data-icon-name="fa-dashboard"
              data-size="lg"
              data-testid="sidebar-icon-dashboard"
            >
              Icon Mock
            </div>
            <span>
              Dashboard
            </span>
          </a>
          <a
            data-active="false"
            data-testid="sidenav-item-patients"
            href="#"
            role="link"
          >
            <div
              data-icon-name="fa-user"
              data-size="lg"
              data-testid="sidebar-icon-patients"
            >
              Icon Mock
            </div>
            <span>
              Patients
            </span>
          </a>
        </ul>
      </nav>
    </header>
  </div>
</div>
`;

exports[`HeaderWSideNav SideNav expansion behavior expands SideNav when isSideNavExpanded=true and isRail=false: expanded_sideNav 1`] = `
<div>
  <div
    data-testid="header-container"
  >
    <header
      aria-label="Bahmni Clinical"
      data-testid="header"
    >
      <nav
        aria-label="Breadcrumb"
        data-testid="breadcrumb"
      >
        <ol
          data-no-trailing="true"
        >
          <li>
            <a
              data-testid="breadcrumb-item"
              href="#"
            >
              Home
            </a>
          </li>
          <li>
            <a
              aria-current="page"
              data-testid="breadcrumb-item-current"
            >
              Current Page
            </a>
          </li>
        </ol>
      </nav>
      <div
        data-testid="header-global-bar"
      >
        <button
          aria-label="Search"
          data-testid="global-action-search"
          data-tooltip-alignment="end"
        >
          <div>
            SearchIcon
          </div>
        </button>
        <button
          aria-label="Notifications"
          data-testid="global-action-notifications"
          data-tooltip-alignment="end"
        >
          <div>
            NotificationIcon
          </div>
        </button>
      </div>
      <nav
        aria-label="SIDE_NAVIGATION"
        data-expanded="true"
        data-is-rail="true"
        data-testid="side-nav"
      >
        <ul
          data-testid="side-nav-items"
        >
          <a
            aria-current="page"
            data-active="true"
            data-testid="sidenav-item-dashboard"
            href="#"
            role="link"
          >
            <div
              data-icon-name="fa-dashboard"
              data-size="lg"
              data-testid="sidebar-icon-dashboard"
            >
              Icon Mock
            </div>
            <span>
              Dashboard
            </span>
          </a>
          <a
            data-active="false"
            data-testid="sidenav-item-patients"
            href="#"
            role="link"
          >
            <div
              data-icon-name="fa-user"
              data-size="lg"
              data-testid="sidebar-icon-patients"
            >
              Icon Mock
            </div>
            <span>
              Patients
            </span>
          </a>
        </ul>
      </nav>
    </header>
  </div>
</div>
`;
